<resources>
    <string name="app_name">Policy Maker</string>
    <string name="welcomeText">Trykk for å starte..</string>
    <string name="voteBtn_text">Stem</string>
    <string name="answerBtn_text">Svar</string>
    <string name="nextBtn_text">Gå Videre</string>
    <string name="exitGameBtn_text">Avslutt Spill</string>
    <string name="logBtn_text">Se Logg</string>
    <string name="levelSelect_name">Nivåvelger</string>
    <string name="actorhead">Valgte aktører</string>
    <string name="statushead">Spillstatus</string>
    <string name="politicalcapital">Tilgjengelig politisk kapital: </string>
    <string name="passion">Tilgjengelig engasjement: </string>
    <string name="knowledge">Tilgjengelig kunnskap: </string>
    <string name="influence">Tilgjengelig innflytelse: </string>
    <string name="network">Tilgjengelig nettverk: </string>
    <string name="legwork">Tilgjengelig benarbeid: </string>
    <string name="prefhead">INSTILLINGER</string>
    <string name="login_username_hint">Brukernavn</string>
    <string name="login_password_hint">Passord</string>
    <string name="login_test_checkbox">Testbruker (NB: Lagrer ikke data)</string>
    <string name="loginBtn_text">Logg inn</string>
    <string name="introtext1">Fjordby er en typisk Norsk kommune. Borgermesteren har sittet i ti år og har et stort flertall av kommunestyret i ryggen. Det politiske klimaet er preget av konstruktivt samarbeid, men det er mange av kommunepolitikerne som synes at den administrative styringen av forvaltningen tar for mye plass. Noe som igjen gjør at det blir for lite plass til politisk ledelse og utvikling av politikk. \n\nRegjeringens skolereform har satt skolepolitikken øverst på dagsordenen i Fjordby kommune. I kommunestyret er det en stor enighet om at man må tenke i helt nye baner hvis Fjordby skal realisere reformens intensjoner og potensialer, samt få den til å henge sammen med lokalpolitikkens utfordringer og visjoner. \n\nFor å få fart i skolepolitikken, besluttet en liten gruppe politikere seg for å sette seg i spissen av en politisk ledet utviklingsprosess. Gruppen kaller seg selv “Initiativgruppen” og består av politikere på tvers av partiene</string>
    <string name="introtext2">I spillet utgjør dere Initiativgruppen. Dere skal spille dere selv i en fiktiv situasjon og handle som dere selv ville gjort i reell situasjon. Dere spiller sammen mot spillet og må samarbeide for å overkomme de utfordringene dere måtte støte på underveis. Spillets mål er å skape en best mulig prosess for utviklingen av en ny skolepolitikk i Fjordby kommune.</string>
    <string name="intro_checkbox">Reglene er forstått</string>
    <string name="startGameBtn_text">Start spillet</string>
    <string name="summaryhead">OPPSUMMERING</string>
    <string name="score1">Deres nye skolepolitikk er en åpenlys fiasko og blir hurtig skrinlagt. Kommunestyret går i tenkeboksen angående hvordan vi i steden skal utvikle skolepolitikken, og en ting er sikkert, dere er ikke invitert!</string>
    <string name="score2">Prosjektet er langt fra en suksess, og det blir aldri implementert i sin helhet. Barne- og Ungdomsutvalget gjennomfører noen av deres beste ideer og overlater det til forvantningen å fylle ut det som mangler</string>
    <string name="score3">Resultatet ble nogenlunde tilfredstillende og skaper en del nytenking på skoleområdet. ikke alt lever opp til forventningene men det er flere lyspunkter man kan peke på</string>
    <string name="score4">Prosjektet er en suksess og dere mottar stor ros for det dere har bidratt med til utviklingen på skoleområdet i Fjordby kommune. Dere konsoliderer posisjonen deres som dyktige politikere og kompetente samarbeidspartnere</string>
    <string name="score5">Prosjektet blir utpekt som et eksempel for suksessfull skolepolitikk og dere får det travelt med besøk fra hele landet som vil lære av dere. Det er ingen tvil om at den neste borgermesteren vil komme fra deres initiativgruppe</string>
    <string name="head1">1: UTFORDRING | MANDATET</string>
    <string name="card1">Deres første utfordring er å formulere et mandat for Temautvalget. Mandatet fastlegger mål og retning for utvalgets arbeid. Dere er klar over at mandatet blir avgjørende for hvilke forventninger som skapes til det endelige produktet. Hva velger dere å fokusere på?</string>
    <string name="card1a">Vekt på problemdefinisjon; Mandatet legger vekt på at arbeidet med å utvikle en ny skolepolitikk tar utgangsppunkt i en bred og grundig avdekning av de problemer og utfordringer som mandatet skal løse \nPris: 1 Nettverk, 1 Kunnskap</string>
    <string name="card1b">Vekt på implementering; Mandatet fokuserer på at utvalgets forslag skal være gjennomførbare. Det skal tas utgangspunkt i de eksisterende ressurserene på området og hvordan man med utgangspunkt i disse kan gjøre den nye skolepolitikken til virkelighet \nPris: 1 Kunnskap, 1 Benarbeid</string>
    <string name="card1c">Vekt på politiske visjoner;  Mandatet pålegger Temautvalget at de skal utvikle en politisk visjon for hvordan skolen ser ut om 10 år, deretter skal utvalget skissere en plan for hvordan visjonene blir infridd \nPris: 1 Innflytelse, 1 Engasjement</string>
    <string name="head2">2: UTFORDRING - TEMAUTVALGET</string>
    <string name="card2">Kommunestyret har nå vedtatt mandatet og ber dere om å komme med et forslag på hvem som skal sitte i Temautvalget utover initiativgruppen. Hvordan vil dere anbefale at kommunestyret setter sammen utvalget? </string>
    <string name="card2a">Det politiske administrative team; Utvalget sammensettes primært av de mest erfarne skolepolitikere og embetsmenn samt ledere fra utvalgte utdanningsinstitusjoner i kommunen. Formålet er å etablere en beslutningskraftig, dedikert og målrettet gruppe. \nPris: 1 Innflytelse</string>
    <string name="card2b">Den representative forsamlingen; Utvalget skal hovedsakelig bestå av representanter for de politiske og administrative beslutningstakerne, samt de berørte partene i form av borgere, brukere, interesseorganisasjoner og foreninger. Formålet er å få input fra alle interessenter og samtidig forplikte de til å gjennomføre. \nPris:  1 Nettverk, 1 Engagsjement</string>
    <string name="card2c">Den håndplukkede gruppen; Dere velger å tenke helt ut av de tradisjonelle rammene og sammensetter en håndpukket gruppe hvor dere går etter personer som har noe spesielt å komme med. Det kan være både faglig dyktige embetsmenn, visjonære ledere, eksperter og iderike lokale ildsjeler. \nPris: 2 Nettverk, 1 Kunnskap</string>
    <string name="head3">3: AKTØRER | TEMAUTVALGET"</string>
    <string name="head4">4: REFLEKSJONSØVELSE | STARTEN AV POLITISK UTVIKLING</string>
    <string name="card4a">Dere er nå klare til å starte med selve utviklingen av den nye skolepolitikken. Innen dere fortsetter med spillet er det derimot tid for en refleksjonsøvelse, dere skal nå tre ut av spillets fiksjon og tilbake til virkeligheten.</string>
    <string name="card4b">Diskuter følgende spørsmål: \n \nHvordan blir politikk utviklet hos dere? \n\nHvor kommer initiativet til politisk innovasjon fra, og hvem involveres i utklingen? \n\nHvilken rolle bør politikere ha i utviklingsarbeidet?</string>
    <string name="head5">5: UTFORDRING | MØTESTED</string>
    <string name="card5">Da dere skal til å innkalle til det første møtet i Temautvalget melder spørsmålet seg.. Hvor skal møtene foregå? Skal dere prioritere effektivitet eller inspirasjon utenfra?</string>
    <string name="card5a">Dere møtes på Rådhuset i Fjordby som ligger sentralt og har de korrekte fasilitetene for politisk arbeid. Her har dere god tilgang til sekretariatet og kantina og det setter en tydelig politisk ramme for arbeidet med en ny skolepolitikk. \nPris: 1 Innflytelse</string>
    <string name="card5c">Dere bestemmer dere for å holde møtene på Nordregårdskolen, som er der politikken skal virkeliggjøres. Dette er den nyeste skolen i Fjordby med de fineste lokalene og de nyeste IT-fasilitetene og dere må innrette dere etter de andre brukerne av lokalene. \nPris: 2 Nettverk, 1 Benarbeid</string>
    <string name="card5b">Dere velger bestemt å ikke ha noe fast møtested, dette åpner for at deltagerne i Temautvalget selv holder møtene og blir dermed også involvert i planleggingen av møtet. \nPris: 2 Benarbeid, 1 Engasjement, 1 Kunnskap</string>
    <string name="head6">6: UTFORDRING | POLITIKERNES ROLLE</string>
    <string name="card6">Da dere sitter å planlegger det første møtet i Temautvalget er det tydelig at dere er usikre på deres rolle som politikere i denne typen utvalg. På den ene siden vil dere gjerne ha de eksterne deltagerne på banen, men på den andre siden er det dere som til slutt står ansvarlig for politikken ovenfor kommunestyret og deres velgere. Hvordan vil dere definere deres rolle som politikere i utvalgsarbeidet?</string>
    <string name="card6a">Dere plasserer dere på bordenden og tar den politiske ledelsen, det betyr at dere setter dagsordenen og angir retningen for arbeidet, men dere gir selvfølgelig rom for at alle kan bidra med synspunkter og ideer så lenge de er innenfor den overordnede rammen. \nPris: 1 Kunnskap, 1 Engasjement</string>
    <string name="card6b">Dere ønsker å inngå en likeverdig og fordomsfri dialog i Temautvalget, men forutser at ikke nødvendigvis skaper løsninger, derfor beslutter dere at dere vil ta forbehold for konkrete ideer uten at dette blokkerer for prossessen. \nPris: 1 Engasjement, 1 Innflytelse</string>
    <string name="card6c">Dere inntar en lytteposisjon der dere gir plass til medlemmene i Temautvalget, på denne måten unngår dere å gi løfter til de eksterne medlemmene, mens dere samtidig står fritt når den nye skolepolitikken skal vedtas i kommunestyret. \nPris: 1 Nettverk</string>
    <string name="head7">7: UTFORDRING | KOMPETANSEKONFLIKT</string>
    <string name="card7">Dere er kommet godt i gang med arbeidet i Temautvalget, og har fått et lite overblikk over både kravene til skolereformen og de lokale utfordringene. Dere mottar nå et brev fra Barne- og Ungdomsutvalget, som vanligvis er de som står ansvarlige for skolepolitikken, der de foreslår at Temautvalget konsentrerer seg på å generere gode ideer til nytenking og overlater det til BU-utvalget å samle ideene til en ny skolepolitisk strategi, hva anbefaler dere at Temautvalget svarer?</string>
    <string name="card7a">Dere anbefaler at formannen for BU-utvalget blir inkludert i Temautvalget, målet er å stoppe en potensiell konflikt uten at Temautvalget mister kompetanse. \nPris: 1 Nettverk, 1 Engasjement</string>
    <string name="card7b">Dere inviterer avsenderen av brevet til et kaffemøte med initiativgruppen, her lytter dere til deres tanker men henviser til mandatet som klart fastslår at det er dere, ikke BU-utvalget, som har som jobb å utforme den nye skolepolitikken. \nPris: 1 Kunnskap, 1 Benarbeid</string>
    <string name="card7c">Dere inviterer hele BU-utvalget med til to av Temautvalgets møter så de kan få et innblikk i deres arbeid og by på deres ideer, og dere kan nyte godt av deres viten og erfaring. \nPris: 1 Kunnskap, 1 Engasjement</string>
    <string name="decision1text">Hva vektlegger dere i mandatet?</string>
    <string name="decision2text">Sammensetningen av Temautvalget:</string>
    <string name="decision3text">Dere valgte følgende aktører:</string>
    <string name="decision4text">Hvor skal dere møtes?</string>
    <string name="decision5text">Hvilken rolle skal politikerne ha?</string>
    <string name="decision6text">Kompetansekonflikt med BU-utvalget:</string>
    <string name="decision7text">Hva gjør dere med lærerne?</string>
    <string name="decision8text">Ny inspirasjonskilde:</string>
    <string name="decision9text">Uenighet om rapporten:</string>
    <string name="decision10text">Overtale kommunestyret:</string>
    <string name="decision11text">Hvilket fokus på implementering?</string>
</resources>