<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/intro_scroll">
    xmlns:android="http://schemas.android.com/apk/res/android" />
<LinearLayout android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.haako.policymaker.MainActivity"
    android:weightSum="1"
    android:id="@+id/intro_layout">

    <ImageView
        android:id="@+id/intro_logo"
        android:layout_width="300dp"
        android:layout_height="233dp"
        android:layout_above="@+id/menuLabel"
        android:layout_alignEnd="@+id/startGameBtn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:onClick="skipBtn_Click"
        android:paddingBottom="5dp"
        android:src="@drawable/intrologo"
        android:visibility="gone"
        app:srcCompat="@drawable/intrologo" />

    <ImageView
        android:id="@+id/intro_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:onClick="skipBtn_Click"
        android:scaleType="fitXY"
        android:visibility="gone"
        app:srcCompat="@drawable/intro" />

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:onClick="skipBtn_Click"
        android:text="@string/introtext1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <TextView
        android:id="@+id/intro_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:text="@string/introtext1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/intro2"
        android:id="@+id/intro_img1"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:visibility="gone"
        android:onClick="skipBtn_Click" />

    <TextView
        android:id="@+id/intro_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:onClick="skipBtn_Click"
        android:text="@string/introtext2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <TextView
        android:id="@+id/intro_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:text="@string/introtext2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/intro_buttons"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/menuCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menuLabel"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_weight="1.19"
            android:text="@string/intro_checkbox" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.19"
            android:layout_marginTop="50dp"
            android:weightSum="1">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/playerNo"
                android:hint="Antall spillere"
                android:textAlignment="center"
                android:layout_alignBottom="@+id/startGameBtn"
                android:layout_alignParentStart="true"
                android:layout_weight="1.19" />

            <Button
                android:id="@+id/startGameBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:onClick="startGame_click"
                android:text="@string/startGameBtn_text" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</ScrollView>